--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^1.0.0",
     "express": "^4.9.7",
     "googleapis": "^1.0.16",
+    "hiredis": "^0.1.17",
     "lodash": "^2.4.1",
     "pushover-notifications": "^0.2.1",
     "redis": "^0.12.1",
